# EM_10A_VU_Secure_Private_Computation_Project

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: on_commit.yml
garbled_circuit/: main.py  ot.py  util.py
src/: alice.py  bob.py  config.py  input_alice.txt  input_bob.txt  main.py  protocol_manager.py
src/circuits/: cmp-32bit-signed_generated.json  cmp-4bit-signed.json  cmp-4bit.json  cmp_4bit.json  cmp_4bit_signed.json  generate_cmp_signed_circuit.py
test/: test_protocol_manager.py
